@@ -1,25 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdvi/kdvi-3.5.1.ebuild,v 1.2 2006/03/27 23:50:52 agriffis Exp $
-
-KMNAME=kdegraphics
-MAXKDEVER=$PV
-KM_DEPRANGE="$PV $MAXKDEVER"
-inherit kde-meta eutils
-
-DESCRIPTION="KDE DVI viewer"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE="tetex"
-
-DEPEND="
-$(deprange $PV $MAXKDEVER kde-base/kviewshell)
->=media-libs/freetype-2"
-RDEPEND="${DEPEND}
-	tetex? (
-	|| ( >=app-text/tetex-2
-	app-text/ptex
-	app-text/cstetex
-	app-text/dvipdfm )
-	)"
-
-KMCOMPILEONLY="kviewshell/"
