@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdvi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdvi/ChangeLog,v 1.38 2006/03/27 23:50:52 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdvi/ChangeLog,v 1.39 2006/04/06 01:45:01 flameeyes Exp $
+
+  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> -kdvi-3.5.0.ebuild,
+  -kdvi-3.5.1.ebuild:
+  Removed old 3.5.0/3.5.1 packages.
 
   27 Mar 2006; Aron Griffis <agriffis@gentoo.org> kdvi-3.5.0.ebuild,
   kdvi-3.5.1.ebuild, kdvi-3.5.2.ebuild:
